// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EpisodeList should have same snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="sc-chPdSV eErTkd"
  >
    <span
      class="sc-htpNat dwRXzK"
      color="#444"
    >
      Episodes
    </span>
  </div>
  <div
    class="sc-jzJRlG eFkJPq"
  >
    <ul
      class="sc-kAzzGY TbUrq"
    >
      <li
        class="sc-cSHVUG IZCuM"
      >
        <span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite;"
          >
            ‌
          </span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite;"
          >
            ‌
          </span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite;"
          >
            ‌
          </span>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`EpisodeList should have same snapshot when rendering values 1`] = `
<DocumentFragment>
  <div
    class="sc-chPdSV eErTkd"
  >
    <span
      class="sc-htpNat dwRXzK"
      color="#444"
    >
      Episodes
    </span>
  </div>
  <div
    class="sc-jzJRlG eFkJPq"
  >
    <ul
      class="sc-kAzzGY TbUrq"
    >
      <li
        class="sc-cSHVUG IZCuM"
      >
        <span
          class="sc-htpNat cmzTFd"
          color="#444"
        >
          S01E01 - one
        </span>
      </li>
      <li
        class="sc-cSHVUG IZCuM"
      >
        <span
          class="sc-htpNat cmzTFd"
          color="#444"
        >
          S01E02 - two
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
